# For_Employers

./: README.md
BinarySearchTree/: firstFile.dot  jdsCheck.txt
Chat/: db.db
Chat/resources/: chat.html  chatClient.js  index.html  style.css
CoinGame/: CMakeLists.txt
CoinGame/CoinGame.xcodeproj/: project.pbxproj
CoinGame/src/: Character.cpp  Character.hpp  Coin.hpp  main.cpp
CoinGame/xcode/: CMakeCache.txt  cmake_install.cmake
CryptoHomeworkWritten/CryptoHomework/: .gitignore  CMakeLists.txt  CryptoHomework.md  main.cpp
CryptoHomeworkWritten/RC4algo/: CMakeLists.txt  main.cpp
MallocClone/: CMakeLists.txt  MyMalloc.cpp  MyMalloc.h  main.cpp
NotTheBees/: bees.js  index.html  styles.css
Synth/: build.gradle
ThreadSafeQueue/: CMakeLists.txt  ConcurrentQueue.h  ConcurrentQueueTests.cpp  ConcurrentQueueTests.h  SerialQueue.hpp  SerialQueueTests.cpp  SerialQueueTests.h  main.cpp  makefile  threadQueue
msdScript_main/: BooleanValues.md  Cont.cpp  Cont.h  Continuations.md  Documentation_Main.md  Doxyfile  Env.h  Function.cpp  Pointers.h  Step.cpp  Val.cpp  Val.h  catch.h  cmdline.cpp  expr.cpp  main.cpp  makefile  msdscript  pointerRefactor.md  refactoring.md  testFile2  test_msdscript
msdScript_main/Archive 2/: CMakeLists.txt  Cont.cpp  Cont.h  Documentation_Main.md  Env.cpp  Parse.cpp  Parse.h  Step.h  Val.cpp  cmdline.h  expr.cpp  expr.h
unixShell/: CMakeLists.txt  main.cpp  shelpers.cpp
webChatServer/: build.gradle  settings.gradle
webscraping_python/: README.md  hn1.html  hn2.html  hn3.html  hn4.html  hn5.html  hw3.ipynb
(+107 files in other folders)
